edited the customer

--- a/contacts-list.html
+++ b/contacts-list.html
@@ -141,100 +141,56 @@
                                 <div class="card">
                                     <div class="card-body">
         
-                                        <h4 class="card-title">Products Stocks</h4>
-                                        <p class="card-title-desc">Currrent product that still available.</p>
+                                        <h4 class="card-title">Customer Information</h4>
+                                        <p class="card-title-desc">Updated Customer information.</p>
         
                                         <div class="table-responsive">
                                             <table class="table table-editable table-nowrap align-middle table-edits">
                                                 <thead>
                                                     <tr>
-                                                        <th>Product ID</th>
-                                                        <th>Name</th>
-                                                        <th>Description</th>
-                                                        <th>Price</th>
-                                                        <th>Quantity</th>
+                                                        <th>Customer ID</th>
+                                                        <th>Full Name</th>
+                                                        <th>Last Name</th>
+                                                        <th>Address</th>
+                                                        <th>Phone Number</th>
+                                                        <th>Password</th>
                                                         <th>Edit</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
                                                     <tr data-id="1">
-                                                        <td data-field="id" style="width: 80px">123</td>
-                                                        <td data-field="name">mint's avocado</td>
-                                                        <td data-field="desc">600g</td>
-                                                        <td data-field="price">18.75</td>
-                                                        <td data-field="qty">100</td>
+                                                        <td data-field="id" style="width: 80px">2423</td>
+                                                        <td data-field="fname">Aiman</td>
+                                                        <td data-field="lname">Hazim</td>
+                                                        <td data-field="address">16, Jalan Astro, Mars</td>
+                                                        <td data-field="num">019123454</td>
+                                                        <td data-field="pwd">aiman234.</td>
                                                         <td style="width: 100px">
                                                             <a class="btn btn-outline-secondary btn-sm edit" title="Edit">
                                                                 <i class="fas fa-pencil-alt"></i>
                                                             </a>
                                                         </td>
                                                     </tr>
-                                                    <tr data-id="2">
-                                                        <td data-field="id" style="width: 80px">345</td>
-                                                        <td data-field="name">rolled oat</td>
-                                                        <td data-field="desc">500g</td>
-                                                        <td data-field="price">23.45</td>
-                                                        <td data-field="qty">145</td>
+                                                    <tr data-id="1">
+                                                        <td data-field="id" style="width: 80px">2344</td>
+                                                        <td data-field="fname">Annie</td>
+                                                        <td data-field="lname">Hassan</td>
+                                                        <td data-field="address">47-09, sky apartment, jb</td>
+                                                        <td data-field="num">016784556</td>
+                                                        <td data-field="pwd">awithe@90</td>
                                                         <td style="width: 100px">
                                                             <a class="btn btn-outline-secondary btn-sm edit" title="Edit">
                                                                 <i class="fas fa-pencil-alt"></i>
                                                             </a>
                                                         </td>
                                                     </tr>
-                                                    <tr data-id="3">
-                                                        <td data-field="id" style="width: 80px">765</td>
-                                                        <td data-field="name">organic brown rice</td>
-                                                        <td data-field="desc">250g</td>
-                                                        <td data-field="price">14.54</td>
-                                                        <td data-field="qty">150</td>
-                                                        <td style="width: 100px">
-                                                            <a class="btn btn-outline-secondary btn-sm edit" title="Edit">
-                                                                <i class="fas fa-pencil-alt"></i>
-                                                            </a>
-                                                        </td>
-                                                    </tr>
-                                                    <tr data-id="4">
-                                                        <td data-field="id" style="width: 80px">1123</td>
-                                                        <td data-field="name">frozen prawn</td>
-                                                        <td data-field="desc">200g</td>
-                                                        <td data-field="price">10.00</td>
-                                                        <td data-field="qty">50</td>
-                                                        <td style="width: 100px">
-                                                            <a class="btn btn-outline-secondary btn-sm edit" title="Edit">
-                                                                <i class="fas fa-pencil-alt"></i>
-                                                            </a>
-                                                        </td>
-                                                    </tr>
-                                                    <tr data-id="5">
-                                                        <td data-field="id" style="width: 80px">1247</td>
-                                                        <td data-field="name">potato wedges</td>
-                                                        <td data-field="desc">500g</td>
-                                                        <td data-field="price">15.90</td>
-                                                        <td data-field="qty">45</td>
-                                                        <td style="width: 100px">
-                                                            <a class="btn btn-outline-secondary btn-sm edit" title="Edit">
-                                                                <i class="fas fa-pencil-alt"></i>
-                                                            </a>
-                                                        </td>
-                                                    </tr>
-                                                    <tr data-id="6">
-                                                        <td data-field="id" style="width: 80px">2376</td>
-                                                        <td data-field="name">sungold kiwi</td>
-                                                        <td data-field="desc">per pack</td>
-                                                        <td data-field="price">20.90</td>
-                                                        <td data-field="qty">100</td>
-                                                        <td style="width: 100px">
-                                                            <a class="btn btn-outline-secondary btn-sm edit" title="Edit">
-                                                                <i class="fas fa-pencil-alt"></i>
-                                                            </a>
-                                                        </td>
-                                                    </tr>
-                                                    <tr data-id="7">
-                                                        <td data-field="id" style="width: 80px">9876</td>
-                                                        <td data-field="name">frozen chopped spinach</td>
-                                                        <td data-field="desc">400g</td>
-                                                        <td data-field="price">12.90</td>
-                                                        <td data-field="qty">50</td>
+                                                    <tr data-id="1">
+                                                        <td data-field="id" style="width: 80px">2345</td>
+                                                        <td data-field="fname">Henry</td>
+                                                        <td data-field="lname">Mane</td>
+                                                        <td data-field="address">18, Jalan JR 3/4, Taman Pelangi</td>
+                                                        <td data-field="num">01984635</td>
+                                                        <td data-field="pwd">nuggy32</td>
                                                         <td style="width: 100px">
                                                             <a class="btn btn-outline-secondary btn-sm edit" title="Edit">
                                                                 <i class="fas fa-pencil-alt"></i>
