--- a/invoices-detail.html
+++ b/invoices-detail.html
@@ -102,7 +102,7 @@
                             <li>
                                 <a href="javascript: void(0);" class="has-arrow waves-effect"> <i class="uil-book-alt"></i> <span>Customers</span> </a>
                                 <ul class="sub-menu" aria-expanded="false">
-                                    <li><a href="contacts-list.html">Customer Infomation</a></li>
+                                    <li><a href="customerinfo.html">Customer Infomation</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -211,7 +211,7 @@
                                                                 <h5 class="font-size-15 mb-1">Nike N012 Running Shoes</h5>
                                                                 <ul class="list-inline mb-0">
                                                                     <li class="list-inline-item">Color : <span class="fw-medium">Gray</span></li>
-                                                                    <li class="list-inline-item">Size : <span class="fw-medium">08</span></li>
+                                                                    <li class="list-inline-item">Size : <span class="fw-medium">09</span></li>
                                                                 </ul>
                                                             </td>
                                                             <td>RM260</td>
@@ -225,7 +225,7 @@
                                                                 <h5 class="font-size-15 mb-1">Adidas Running Shoes</h5>
                                                                 <ul class="list-inline mb-0">
                                                                     <li class="list-inline-item">Color : <span class="fw-medium">Black</span></li>
-                                                                    <li class="list-inline-item">Size : <span class="fw-medium">09</span></li>
+                                                                    <li class="list-inline-item">Size : <span class="fw-medium">10</span></li>
                                                                 </ul>
                                                             </td>
                                                             <td>RM250</td>
