--- a/customerinfo.html
+++ b/customerinfo.html
@@ -4,7 +4,7 @@
     <head>
         
         <meta charset="utf-8" />
-        <title>Customer Information</title>
+        <title>List of Invoices</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta content="Premium Multipurpose Admin & Dashboard Template" name="description" />
         <meta content="Themesbrand" name="author" />
@@ -103,7 +103,7 @@
                             <li>
                                 <a href="javascript: void(0);" class="has-arrow waves-effect"> <i class="uil-book-alt"></i> <span>Customers</span> </a>
                                 <ul class="sub-menu" aria-expanded="false">
-                                    <li><a href="contacts-list.html">Customer Infomation</a></li>
+                                    <li><a href="customerinfo.html">Customer Infomation</a></li>
                                 </ul>
                             </li>
                             <li>
