--- a/ecommerce-orders.html
+++ b/ecommerce-orders.html
@@ -106,7 +106,7 @@
 						<li>
 							<a href="javascript: void(0);" class="has-arrow waves-effect"> <i class="uil-book-alt"></i> <span>Customers</span> </a>
 							<ul class="sub-menu" aria-expanded="false">
-								<li><a href="contacts-list.html">Customer Infomation</a></li>
+								<li><a href="customerinfo.html">Customer Infomation</a></li>
 							</ul>
 						</li>
 						<li>
