--- a/customerinfo.html
+++ b/customerinfo.html
@@ -4,7 +4,7 @@
     <head>
         
         <meta charset="utf-8" />
-        <title>List of Invoices</title>
+        <title>Customer Information</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta content="Premium Multipurpose Admin & Dashboard Template" name="description" />
         <meta content="Themesbrand" name="author" />
@@ -130,7 +130,7 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="page-title-box d-flex align-items-center justify-content-between">
-                                    <h4 class="mb-0">Stocks</h4>
+                                    <h4 class="mb-0">Customers</h4>
                                 </div>
                             </div>
                         </div>
