--- a/orders.html
+++ b/orders.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Inventory</title>
+	<title>Orders</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta content="Premium Multipurpose Admin & Dashboard Template" name="description" />
 	<meta content="Themesbrand" name="author" />
@@ -93,7 +93,7 @@
 							<a href="javascript: void(0);" class="has-arrow waves-effect"> <i class="uil-store"></i> <span>All inventory</span> </a>
 							<ul class="sub-menu" aria-expanded="false">
 								<li><a href="stocks.html">Stocks</a></li>
-								<li><a href="ecommerce-orders.html">Orders</a></li>
+								<li><a href="orders.html">Orders</a></li>
 							</ul>
 						</li>
 						<li>
