--- a/stocks.html
+++ b/stocks.html
@@ -90,7 +90,7 @@
                                 <a href="javascript: void(0);" class="has-arrow waves-effect"> <i class="uil-store"></i> <span>All inventory</span> </a>
                                 <ul class="sub-menu" aria-expanded="false">
                                     <li><a href="stocks.html">Stocks</a></li>
-                                    <li><a href="ecommerce-orders.html">Orders</a></li>
+                                    <li><a href="orders.html">Orders</a></li>
                                 </ul>
                             </li>
                             <li>
